# AutomaWeb

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.db  dev.py  doc.md  docker-compose.yml  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html  requirements.txt  start.py
.github/workflows/: docker-build.yml  tests.yml
TESTE/: generated_test_1.robot  generated_test_2.robot  generated_test_3.robot
TESTE/🧪_teste/: generated_test_5.robot
app/: main.py
app/ai_validation/: __init__.py  locator_analyzer.py  metrics.py  self_healing_service.py  test_fixer.py  test_validator.py
app/api/: copilot_routes.py  deps.py  routes.py
app/builder/: __init__.py  code_generator.py  event_store.py  playwright_manager.py  router.py  service.py
app/core/: config.py  logging.py
app/db/: init_db.py  session.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
app/llm/: copilot_adapter.py  copilot_auth.py  copilot_http.py  copilot_models.py  copilot_provider.py  groq_client.py
app/models/: builder.py  generated_test.py  log.py  project.py  test_execution.py  test_request.py  user.py
app/repositories/: log_repository.py  project_repository.py  test_repository.py
app/schemas/: generated_test.py  project.py  scan.py  test_execution.py  test_request.py
app/services/: ai_service.py  element_scanner.py  project_service.py  test_execution_service.py  (+2 more)
docs/: CHUNKED_GENERATION_EXAMPLES.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
scripts/: post_install.py
(+445 files in other folders)
